syntax = "proto3";
package poktroll.migration;

option go_package = "github.com/pokt-network/poktroll/x/migration/types";
option (gogoproto.stable_marshaler_all) = true;

import "cosmos_proto/cosmos.proto";
import "gogoproto/gogo.proto";
import "cosmos/base/v1beta1/coin.proto";

import "poktroll/shared/service.proto";
import "poktroll/migration/morse_onchain.proto";

// EventUploadMorseState is emitted when the MorseAccountState is created on-chain.
message EventCreateMorseAccountState {
  // The height (on Shannon) at which the MorseAccountState was created on-chain.
  int64 created_at_height = 1 [(gogoproto.jsontag) = "created_at_height"];

  // The sha256 has of the MorseAccountState.
  bytes morse_account_state_hash = 2 [(gogoproto.jsontag) = "morse_account_state_hash"];

  // The number of accounts (EOAs) which were collected from the Morse state export, which may be claimed.
  // NOTE: Application and supplier actor stakes are consolidated into their corresponding account balances.
  uint64 num_accounts = 3 [(gogoproto.jsontag) = "num_accounts"];
}
